# bccmd

./: CMakeLists.txt  README.md  bccmd.c  ps-default.psr  test.c
config/: build_for_Ubuntu.sh  build_for_android_arm64v8a.sh  build_for_android_armeabiv7a.sh  build_for_android_x86.sh  build_for_android_x86_64.sh
inc/: bt_if.h  bt_types.h
radiotest/radiotest/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  radiotest  radiotest.pro
src/: app_bcsp.c  app_bcsp.h  app_cmd.c  app_cmd.h  app_evt.c  app_evt.h  app_handler.c  app_handler.h  app_logcat.c  app_logcat.h  app_private.h  app_utils.c  app_utils.h
tools/: csr_hci.c  csr_usb.c
